@@ -1,3 +1,8 @@
+2004-02-27  Takashi Iwai <tiwai@suse.de>
+
+	* interface/Makefile.am, interface/interface_[Ak].txt:
+	  Added the missing text files for interface A and k.
+
 2004-02-26  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
 	* doc/C/timidity.cfg.5, doc/ja_JP.ujis/timidity.cfg.5: Update
